--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -1,7 +1,7 @@
-import { Meta } from '@storybook/addon-docs/blocks';
-import ReactIcon from './assets/react.svg';
+import { Meta } from '@storybook/addon-docs/blocks'
+import ReactIcon from './assets/react.svg'
 
-<Meta title="Playground/Introduction" />
+<Meta title='Playground/Introduction' />
 
 <style>{`
   .subheading {
@@ -117,21 +117,33 @@ import ReactIcon from './assets/react.svg';
 
 This was created with the intention to test & play with components and utilities. Each one has a link to its github repository, just click to check it out.
 
-<div className="subheading">React components</div>
+<div className='subheading'>React components</div>
 
-<div className="link-list">
-	<a
-		className="link-item"
-		href="https://github.com/aiherrera/react-hamburger"
-		target="_blank"
-	>
-		<img src={ReactIcon} alt="react" />
-		<span>
-			<strong>Hamburger Menu</strong>
-			Easy to use react hamburger menu.
-			<code>npm i @aiherrera/react-hamburger</code>
-		</span>
-	</a>
+<div className='link-list'>
+  <a
+    className='link-item'
+    href='https://github.com/aiherrera/react-hamburger'
+    target='_blank'
+  >
+    <img src={ReactIcon} alt='react' />
+    <span>
+      <strong>Hamburger Menu</strong>
+      Easy to use react hamburger menu.
+      <code>npm i @aiherrera/react-hamburger</code>
+    </span>
+  </a>
+  <a
+    className='link-item'
+    href='https://github.com/aiherrera/react-pricing-table'
+    target='_blank'
+  >
+    <img src={ReactIcon} alt='react' />
+    <span>
+      <strong>Pricing table</strong>
+      Easy to use react pricing table.
+      <code>npm i @aiherrera/react-pricing-table</code>
+    </span>
+  </a>
 </div>
 
 <!--<div className='tip-wrapper'>
