📝 added slider story on intro

--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -144,6 +144,18 @@ This was created with the intention to test & play with components and utilities
       <code>npm i @aiherrera/react-pricing-table</code>
     </span>
   </a>
+  <a
+    className='link-item'
+    href='https://github.com/aiherrera/react-slider'
+    target='_blank'
+  >
+    <img src={ReactIcon} alt='react' />
+    <span>
+      <strong>Slider</strong>
+      Easy to use react slider.
+      <code>npm i @aiherrera/react-slider</code>
+    </span>
+  </a>
 </div>
 
 <!--<div className='tip-wrapper'>
