refactor(Logo): update version, add to intro & fix component path

--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -156,6 +156,18 @@ This was created with the intention to test & play with components and utilities
       <code>npm i @aiherrera/react-slider</code>
     </span>
   </a>
+  <a
+    className='link-item'
+    href='https://github.com/aiherrera/react-logo'
+    target='_blank'
+  >
+    <img src={ReactIcon} alt='react' />
+    <span>
+      <strong>Logo</strong>
+      Easy to use react logo.
+      <code>npm i @aiherrera/react-logo</code>
+    </span>
+  </a>
 </div>
 
 <!--<div className='tip-wrapper'>
